Add links for my public keys
Resolves #93

relate to kachick/dotfiles#311
kachick/dotfiles#263, kachick/dotfiles#264

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,20 @@
           </li>
           <li><a href="https://github.com/kachick?tab=stars">interest</a></li>
           <li><a href="https://lishogi.org/@/kachick">shogi</a></li>
+          <li>
+            <a
+              href="https://github.com/kachick.gpg"
+              title="key_id: EF6E574D040AE2A5 - key_fingerprint: 9121 5D87 20CA B405 C63F 24D2 EF6E 574D 040A E2A5"
+              >pgp</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/kachick.keys"
+              title="key_fingerprint(SHA256): Qj9t7RdxsK/sd34tafjR2QamIfogHXNYArZbi0GVo3M"
+              >ssh</a
+            >
+          </li>
         </ul>
       </main>
       <footer class="footer">
