Capitalize link texts

--- a/public/index.html
+++ b/public/index.html
@@ -20,22 +20,22 @@
       <main class="main">
         <ul class="main-links">
           <li>
-            <a href="https://github.com/kachick/times_kachick/issues?q=is%3Aissue+is%3Aclosed+label%3Ablog">blog(ja)</a>
+            <a href="https://github.com/kachick/times_kachick/issues?q=is%3Aissue+is%3Aclosed+label%3Ablog">Blog(ja)</a>
           </li>
-          <li><a href="https://github.com/kachick?tab=stars">interest</a></li>
-          <li><a href="https://lishogi.org/@/kachick">shogi</a></li>
+          <li><a href="https://github.com/kachick?tab=stars">Interest</a></li>
+          <li><a href="https://lishogi.org/@/kachick/all">Shogi</a></li>
           <li>
             <a
               href="https://github.com/kachick.gpg"
               title="key_id: EF6E574D040AE2A5 - key_fingerprint: 9121 5D87 20CA B405 C63F 24D2 EF6E 574D 040A E2A5"
-              >pgp</a
+              >PGP</a
             >
           </li>
           <li>
             <a
               href="https://github.com/kachick.keys"
               title="key_fingerprint(SHA256): Qj9t7RdxsK/sd34tafjR2QamIfogHXNYArZbi0GVo3M"
-              >ssh</a
+              >SSH</a
             >
           </li>
         </ul>
