--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,8 @@
     <div id="index">
       <main class="main">
         <ul class="main-links">
-          <li>
-            <a href="https://github.com/kachick/times_kachick/issues?q=is%3Aissue+is%3Aclosed+label%3Ablog">Blog(ja)</a>
-          </li>
+          <li><a href="https://github.com/users/kachick/projects/3">Kanban</a></li>
+          <li><a href="https://github.com/kachick/dotfiles">Bonsai</a></li>
           <li><a href="https://github.com/kachick?tab=stars">Interest</a></li>
           <li><a href="https://lishogi.org/@/kachick/all">Shogi</a></li>
           <li>
