I started to learn chess

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
           <li><a href="https://github.com/kachick/dotfiles">Bonsai</a></li>
           <li><a href="https://github.com/kachick?tab=stars">Interest</a></li>
           <li><a href="https://lishogi.org/@/kachick/all">Shogi</a></li>
+          <li><a href="https://lichess.org/@/kachick/all">Chess</a></li>
           <li>
             <a
               href="https://github.com/kachick.gpg"
