Simplify varical centering with `align-content: center`

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <body>
     <div id="index">
       <main class="main">
-        <ul class="main-links">
+        <ul>
           <li>
             <a href="https://github.com/users/kachick/projects/3">Kanban</a>
           </li>
@@ -44,10 +44,7 @@
         </ul>
       </main>
       <footer class="footer">
-        <div class="footer-body">
-          <a href="https://github.com/kachick/kachick.github.io/labels/bug"
-          >🐛</a>
-        </div>
+        <a href="https://github.com/kachick/kachick.github.io/labels/bug">🐛</a>
       </footer>
     </div>
   </body>
