--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
-    <link rel="icon" type="image/png" href="https://github.com/kachick.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://github.com/kachick.png?size=48"
+    />
     <title>kachick</title>
   </head>
   <body>
