--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- https://github.com/tiaanduplessis/nanoreset -->
     <link
       rel="stylesheet"
-      href="https://unpkg.com/nanoreset/nanoreset.min.css"
+      href="https://esm.sh/v135/nanoreset/nanoreset.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
