Replace unpkg.com with self-host for reset CSS (#209)
* Replace unpkg.com with esm.sh for reset CSS

* Self-host reset CSS

* Do not put keep reset css here

* Trigger release workflow to test in PRs

* Fix workflow syntax

* Extract build steps

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- https://github.com/tiaanduplessis/nanoreset -->
     <link
       rel="stylesheet"
-      href="https://unpkg.com/nanoreset/nanoreset.min.css"
+      href="vendor/nanoreset.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
