Download only using emoji font Glyph
A font part of GH-190

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Noto+Emoji&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Noto+Emoji&display=swap&text=🐛"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
