Fix to specify text for Google Fonts
AFAIK, we can not merge multiple fonts for this...

A part of GH-190

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Noto+Emoji&display=swap&text=🐛"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap&text=%F0%9F%90%9B"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
