Load Google Fonts lazy with media print

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,14 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap"
       rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap&text=%F0%9F%90%9B"
       rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
     />
     <link rel="stylesheet" href="main.css" />
     <link
