Replace media print with preload for fonts lazy loading

--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap"
+      rel="preload"
+      as="style"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap"
       rel="stylesheet"
-      media="print"
-      onload="this.media='all'"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap&text=%F0%9F%90%9B"
+      rel="preload"
+      as="style"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap&text=%F0%9F%90%9B"
       rel="stylesheet"
-      media="print"
-      onload="this.media='all'"
     />
     <link rel="stylesheet" href="main.css" />
     <link
