Lazy load Google Fonts (#211)
* Load Google Fonts lazy with media print

* Replace media print with preload for fonts lazy loading

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap"
+      rel="preload"
+      as="style"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap"
       rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap&text=%F0%9F%90%9B"
+      rel="preload"
+      as="style"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap&text=%F0%9F%90%9B"
